--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.2.1
+  flutter_spinkit: ^5.1.0
+  url_launcher: ^6.1.6
+  intl_phone_field: ^3.1.0
+  
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+# # dependance qui permet de mettre le splash au debut au lancement de l appli    
+#   flutter_native_splash: ^2.2.14  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -49,6 +57,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   video_player: ^2.4.7
   carousel_slider: ^4.1.1
+  tcard: ^1.3.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
