--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -39,14 +40,23 @@ dependencies:
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.1.6
   intl_phone_field: ^3.1.0
-  
+  video_player: ^2.4.7
+  carousel_slider: ^4.1.1
+  flutter_native_splash: ^2.2.13
+  flutter_lints: ^2.0.0
+  tcard: ^1.3.5
 
 
-
+flutter_native_splash:
+  background_image: "assets/images/logoT.png"  
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-# # dependance qui permet de mettre le splash au debut au lancement de l appli    
+
+
+
+#  dependance qui permet de mettre le splash au debut au lancement de l appli    
 #   flutter_native_splash: ^2.2.14  
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -54,10 +64,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-  video_player: ^2.4.7
-  carousel_slider: ^4.1.1
-  tcard: ^1.3.5
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
